--- a/wildflycxfspring/src/main/resources/archetype-resources/applicationservice/pom.xml
+++ b/wildflycxfspring/src/main/resources/archetype-resources/applicationservice/pom.xml
@@ -18,7 +18,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>dk.emstar.wildfly</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>interfaces</artifactId>
         </dependency>
         <dependency>
@@ -76,16 +76,14 @@
     </dependencies>
 
     <build>
-        <!-- Set the name of the war, used as the context root when the app 
-            is deployed -->
+        <!-- Set the name of the war, used as the context root when the app is deployed -->
         <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>${version.war.plugin}</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
-
                     <archive></archive>
                 </configuration>
             </plugin>
@@ -94,26 +92,12 @@
             <plugin>
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
-                <version>${version.wildfly.maven.plugin}</version>
-            </plugin>
-            <!-- Compiler plugin enforces Java 1.6 compatibility and activates 
-                annotation processors -->
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${version.compiler.plugin}</version>
-                <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
 
     <profiles>
         <profile>
-            <!-- The default profile skips all tests, though you can tune 
-                it to run just unit tests based on a custom pattern -->
-            <!-- Seperate profiles are provided for running all tests -->
             <id>default</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -121,40 +105,30 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
-                        <version>${version.war.plugin}</version>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${version.surefire.plugin}</version>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
 
         <profile>
-            <!-- An optional testing profile that executes tests in your 
-                WildFly instance using Arquillian -->
-            <!-- This profile will start a new WildFly instance, and execute 
-                the test, shutting it down when done -->
+            <!-- An optional testing profile that executes tests in your WildFly instance using Arquillian -->
+            <!-- This profile will start a new WildFly instance, and execute the test, shutting it down when done -->
             <!-- Run with: mvn clean test -Parq-wildfly-managed -->
             <id>arq-wildfly-managed</id>
             <dependencies>
                 <dependency>
                     <groupId>org.wildfly</groupId>
                     <artifactId>wildfly-arquillian-container-managed</artifactId>
-                    <version>${version.arquillian.container}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${version.surefire.plugin}</version>
                         <configuration>
                             <excludes>
                                 <exclude>**/ClientTest.java</exclude>
@@ -166,23 +140,21 @@
         </profile>
 
         <profile>
-            <!-- An optional Arquillian testing profile that executes tests 
-                in a remote WildFly instance -->
+            <!-- An optional Arquillian testing profile that executes tests in a remote WildFly instance -->
             <!-- Run with: mvn clean test -Parq-wildfly-remote -->
             <id>arq-wildfly-remote</id>
             <dependencies>
                 <dependency>
                     <groupId>org.wildfly</groupId>
                     <artifactId>wildfly-arquillian-container-remote</artifactId>
-                    <version>${version.arquillian.container}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${version.surefire.plugin}</version>
                         <configuration>
                             <excludes>
                                 <exclude>**/ClientTest.java</exclude>
@@ -194,15 +166,14 @@
         </profile>
 
         <profile>
-            <!-- An optional testing profile that executes tests in a remote 
-                WildFly instance where the application has already been deployed -->
+            <!-- An optional testing profile that executes tests in a remote WildFly instance where the application has already been deployed -->
             <!-- Run with: mvn clean test -Pjbossas-remote -->
             <id>jbossas-remote</id>
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${version.surefire.plugin}</version>
                         <configuration>
                             <systemProperties>
                                 <property>
@@ -220,19 +191,12 @@
         </profile>
 
         <profile>
-            <!-- When built in OpenShift the 'openshift' profile will be 
-                used when invoking mvn. -->
-            <!-- Use this profile for any OpenShift specific customization 
-                your app will need. -->
-            <!-- By default that is to put the resulting archive into the 
-                'deployments' folder. -->
-            <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
             <id>openshift</id>
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
-                        <version>${version.war.plugin}</version>
                         <configuration>
                             <outputDirectory>deployments</outputDirectory>
                             <warName>${project.artifactId}</warName>
@@ -240,8 +204,8 @@
                         </configuration>
                     </plugin>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${version.surefire.plugin}</version>
                         <configuration>
                             <skip>true</skip>
                         </configuration>
@@ -250,5 +214,4 @@
             </build>
         </profile>
     </profiles>
-
 </project>
