--- a/wildflycxfspring/src/main/resources/archetype-resources/applicationservice/src/main/webapp/WEB-INF/web.xml
+++ b/wildflycxfspring/src/main/resources/archetype-resources/applicationservice/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,6 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
-
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/applicationContext.xml</param-value>
@@ -16,13 +15,13 @@
     </listener>
      
   <servlet>
-    <servlet-name>CXFServlet</servlet-name>
+    <servlet-name>${rootArtifactId} CXFServlet</servlet-name>
     <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
  
   <servlet-mapping>
-    <servlet-name>CXFServlet</servlet-name>
+    <servlet-name>${rootArtifactId} CXFServlet</servlet-name>
     <url-pattern>/services/*</url-pattern>
   </servlet-mapping>     
 </web-app>
