--- a/wildflycxfspring/pom.xml
+++ b/wildflycxfspring/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>dk.emstar.wildfly.springcxf</groupId>
-  <artifactId>pom-archetype</artifactId>
+  <groupId>dk.emstar.wildfly</groupId>
+  <artifactId>springcxf-archetype</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
-  <name>pom-archetype</name>
+  <name>springcxf-archetype</name>
 
   <build>
     <extensions>
