--- a/wildflycxfspring/src/main/resources/archetype-resources/common/pom.xml
+++ b/wildflycxfspring/src/main/resources/archetype-resources/common/pom.xml
@@ -30,7 +30,7 @@
             <plugin>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-xjc-plugin</artifactId>
-                <version>2.3.0</version>
+                <version>${version.cxf}</version>
                 <configuration></configuration>
                 <executions>
                     <execution>
