--- a/simplespring/src/main/resources/archetype-resources/pom.xml
+++ b/simplespring/src/main/resources/archetype-resources/pom.xml
@@ -29,18 +29,18 @@
         <version.jar.plugin>2.5</version.jar.plugin>
         <version.build-helper-maven-plugin.maven.plugin>1.9.1</version.build-helper-maven-plugin.maven.plugin>
 
-        <version.spring>1.0.2.RELEASE</version.spring>
+        <version.spring.io>2.0.1.RELEASE</version.spring.io>
         <version.cxf>3.0.1</version.cxf>
 
         <version.powermock>1.5.5</version.powermock>
-        <version.hamcrest>1.3</version.hamcrest>
+        <version.assertj>3.2.0</version.assertj>
         <version.mockito>1.9.5</version.mockito>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -55,8 +55,8 @@
             <artifactId>commons-logging</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -76,7 +76,7 @@
             <dependency>
                 <groupId>io.spring.platform</groupId>
                 <artifactId>platform-bom</artifactId>
-                <version>${version.spring}</version>
+                <version>${version.spring.io}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -95,9 +95,9 @@
                 <classifier>tests</classifier>
             </dependency>
             <dependency>
-                <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-all</artifactId>
-                <version>${version.hamcrest}</version>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${version.assertj}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
